@@ -71,7 +71,7 @@ void fuse_unmount(const char *mountpoint)
     const char *mountprog = FUSERMOUNT_PROG;
     char umount_cmd[1024];
     
-    snprintf(umount_cmd, sizeof(umount_cmd) - 1, "%s -u -q %s", mountprog,
+    snprintf(umount_cmd, sizeof(umount_cmd) - 1, "%s -u -q -z %s", mountprog,
              mountpoint);
     
     umount_cmd[sizeof(umount_cmd) - 1] = '\0';
