@@ -1,3 +1,7 @@
+2004-03-30  Miklos Szeredi <mszeredi@inf.bme.hu>
+
+	* new fusermount flag '-z': lazy unmount, default is not lazy
+
 2004-03-25  Miklos Szeredi <mszeredi@inf.bme.hu>
 
 	* If filesystem doesn't define a statfs operation, then an
